--- a/mnist4beginners.ipynb
+++ b/mnist4beginners.ipynb
@@ -27,7 +27,7 @@
         "#Ensuring that TensorFlow v1 is used as backend\n",
         "%tensorflow_version 1.x \n",
         "#Importing kinds of layers\n",
-        "from keras.layers import Dense,Dropout,BatchNormalization\n",
+        "from keras.layers import Dense,Dropout\n",
         "#Importing a basic model type\n",
         "from keras.models import Sequential\n",
         "#Importing the DIGIT CLASSIFIER dataset \n",
