--- a/mnist4beginners.ipynb
+++ b/mnist4beginners.ipynb
@@ -22,6 +22,8 @@
         "colab": {}
       },
       "source": [
+        "#Go to Edit->Notebook Setting->Hardware Accelerator->Select GPU and Save\n",
+        "#Doing the above will speed up your training tremendously, and save time.\n",
         "#Importing Keras programming framework\n",
         "import keras \n",
         "#Ensuring that TensorFlow v1 is used as backend\n",
