--- a/mnist4beginners.ipynb
+++ b/mnist4beginners.ipynb
@@ -22,19 +22,24 @@
         "colab": {}
       },
       "source": [
-        "#Go to Edit->Notebook Setting->Hardware Accelerator->Select GPU and Save\n",
-        "#Doing the above will speed up your training tremendously, and save time.\n",
-        "#Importing Keras programming framework\n",
+        "'''\n",
+        "Code writen by Dweep Joshipura\n",
+        "Blog - lightspeedac.blogspot.com\n",
+        "Please read the comments carefully\n",
+        "'''\n",
+        "# Go to Edit->Notebook Setting->Hardware Accelerator->Select GPU and Save\n",
+        "# Doing the above will speed up your training tremendously, and save time.\n",
+        "# Importing Keras programming framework\n",
         "import keras \n",
-        "#Ensuring that TensorFlow v1 is used as backend\n",
+        "# Ensuring that TensorFlow v1 is used as backend\n",
         "%tensorflow_version 1.x \n",
-        "#Importing kinds of layers\n",
+        "# Importing kinds of layers\n",
         "from keras.layers import Dense,Dropout\n",
-        "#Importing a basic model type\n",
+        "# Importing a basic model type\n",
         "from keras.models import Sequential\n",
-        "#Importing the DIGIT CLASSIFIER dataset \n",
+        "# Importing the DIGIT CLASSIFIER dataset \n",
         "from keras.datasets import mnist \n",
-        "#Importing a function used later\n",
+        "# Importing a function used later\n",
         "from keras.utils import to_categorical"
       ],
       "execution_count": 0,
